# TwinFi-AI

./: .gitignore  LICENSE  README.md  index.html
assets/css/: design-system.css
assets/js/: api-client.js
backend/: .env.example  pyproject.toml  requirements.txt
backend/.github/workflows/: ci.yml
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: orchestrator.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  coach.py  dna.py  router.py  transactions.py  twin.py
backend/app/database/: __init__.py  mongodb.py  postgres.py  redis_client.py
backend/app/models/: bank_account.py  customer_profile.py  transaction.py  user.py
backend/app/schemas/: auth.py
backend/app/services/: auth_service.py  dna_engine.py  fraud_detector.py  groq_service.py  twin_engine.py
backend/docker/: Dockerfile.api  docker-compose.yml
backend/kubernetes/deployments/: api-deployment.yaml
backend/tests/: __init__.py  conftest.py  test_api.py
desktop/: coach.html  dashboard.html  dna.html  economy.html  fraud.html  investments.html  network.html  simulator.html  twin.html
mobile/: coach.html  dna.html  economy.html  emotion.html  fraud.html  goals.html  home.html  insights.html  investments.html  leakage.html  login.html  network.html  notifications.html  profile.html  settings.html  signup.html  simulator.html  splash.html  twin.html
rm/: dashboard.html
scratch/: generate_desktop_pages.py
screenshots/: README.md
