[tool.poetry]
name = "twinfi-backend"
version = "1.0.0"
description = "TwinFi AI - The World's First Living Financial Twin"
authors = ["TwinFi Team <team@twinfi.ai>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

[tool.ruff]
line-length = 100
target-version = "py312"
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=app --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
